# py-fit-export

./: ACTIVITY.fit  ACTIVITY2.fit  LICENSE  README.md  activity.json  main.py  manual_tests.py  pyproject.toml  scripts.py  test_notebook.ipynb  test_workbook.xlsx
.virtual_documents/: Untitled.ipynb  test_notebook.ipynb
py_fit_export/: cli.py  core.py  extracter.py  fit_info_extractor.py  utils.py  wrk_info_export.py
