[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "py-fit-export"
version = "0.1.0a1"
classifiers = ["Development Status :: 3 - Alpha"]
description = "Extract Garmin FIT activity data and export it to flat formats (Excel, CSV)."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Andreas Thorén" }]
dependencies = ["garmin-fit-sdk", "openpyxl"]

[project.scripts]
py-fit-export = "py_fit_export.cli:main"

[tool.setuptools]
packages = ["py_fit_export"]
