[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "py-fit-export"
version = "0.1.0"
classifiers = ["Development Status :: 3 - Alpha"]
description = "Extract Garmin FIT activity data and export it to flat formats (Excel, CSV)."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10,<3.13"
authors = [{ name = "Andreas Thorén" }]
license = { text = "MIT" }
dependencies = [
    "garmin-fit-sdk",
    "openpyxl",
    "garminexport"
]

[tool.setuptools]
packages = ["py_fit_export"]